# pedalboard

./: .bazelrc  .eslintrc.json  .gitignore  .npmrc  .swcrc.base.esm.json  .syncpackrc.json  BUILD.bazel  CHANGELOG.md  CLAUDE.md  LICENSE.md  MODULE.bazel  README.md  REPO.bazel  esbuild.config.js  esbuild.css.plugin.js  eslint.config.mjs  jest.config.base.js  lerna.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.base.mts
.changeset/: blue-games-tie.md  config.json  curvy-swans-shout.md  cyan-jeans-pump.md  eleven-zoos-rest.md  shiny-rings-sing.md  sixty-teeth-relate.md
.claude/skills/create-react-component/: SKILL.md
.claude/skills/create-react-component/templates/: component.scss  component.stories.tsx  component.test.tsx  component.tsx
.git-hooks/: commit-msg  pre-commit
.github/workflows/: chromatic.yml  coverage-report.yml  coverage.yml  npm-publish.yml
scripts/: aggregate-packages-coverage.js
tools/lint/: BUILD.bazel  linters.bzl
tools/test/: BUILD.bazel  testers.bzl
